tests/sparql/basic_select_after_fix.txt

================================================================================
SPARQL HTTP 测试套件
================================================================================

================================================================================
测试: TestBasicSelectAllEmployees
描述: 基础查询：获取所有员工
================================================================================

[1/3] 执行 SPARQL 查询...
SPARQL:

        PREFIX ex: <http://example.org/>
        SELECT ?emp ?firstName ?lastName
        WHERE {
            ?emp ex:first_name ?firstName ;
                 ex:last_name ?lastName .
        }
        LIMIT 10
        
结果: 10 行, 78.89 ms

[2/3] 执行 SQL 基线查询...
SQL:

        SELECT employee_id AS emp, first_name AS "firstName", last_name AS "lastName"
        FROM employees
        LIMIT 10
        
结果: 10 行, 7.57 ms

[3/3] 对比结果...
✓ 测试通过

================================================================================
测试: TestSelectSpecificColumns
描述: 查询特定属性：员工姓名和邮箱
================================================================================

[1/3] 执行 SPARQL 查询...
SPARQL:

        PREFIX ex: <http://example.org/>
        SELECT ?firstName ?lastName ?email
        WHERE {
            ?emp ex:first_name ?firstName ;
                 ex:last_name ?lastName ;
                 ex:email ?email .
        }
        LIMIT 5
        
结果: 5 行, 46.07 ms

[2/3] 执行 SQL 基线查询...
SQL:

        SELECT first_name AS "firstName", last_name AS "lastName", email
        FROM employees
        LIMIT 5
        
结果: 5 行, 7.31 ms

[3/3] 对比结果...
✓ 测试通过

================================================================================
测试: TestSelectWithOrderBy
描述: 排序查询：按入职日期排序
================================================================================

[1/3] 执行 SPARQL 查询...
SPARQL:

        PREFIX ex: <http://example.org/>
        SELECT ?firstName ?lastName ?hireDate
        WHERE {
            ?emp ex:first_name ?firstName ;
                 ex:last_name ?lastName ;
                 ex:hire_date ?hireDate .
        }
        ORDER BY DESC(?hireDate)
        LIMIT 10
        
结果: 0 行, 0.00 ms

[2/3] 执行 SQL 基线查询...
SQL:

        SELECT first_name AS "firstName", last_name AS "lastName", hire_date AS "hireDate"
        FROM employees
        ORDER BY hire_date DESC
        LIMIT 10
        
结果: 10 行, 34.30 ms

[3/3] 对比结果...
✗ 测试失败:
  - SPARQL error: SPARQL SQL execution error: column "hiredate" does not exist
LINE 1: ..._name AS firstName FROM employees AS emp ORDER BY hireDate D...
                                                             ^
HINT:  Perhaps you meant to reference the column "emp.hire_date".


================================================================================
测试: TestSelectDistinctDepartments
描述: 去重查询：获取所有不重复的部门
================================================================================

[1/3] 执行 SPARQL 查询...
SPARQL:

        PREFIX ex: <http://example.org/>
        SELECT DISTINCT ?deptName
        WHERE {
            ?dept ex:department_name ?deptName .
        }
        ORDER BY ?deptName
        LIMIT 20
        
结果: 20 行, 44.27 ms

[2/3] 执行 SQL 基线查询...
SQL:

        SELECT DISTINCT department_name AS "deptName"
        FROM departments
        ORDER BY department_name
        LIMIT 20
        
结果: 20 行, 7.17 ms

[3/3] 对比结果...
✓ 测试通过

================================================================================
测试: TestSelectCountEmployees
描述: 计数查询：统计员工总数
================================================================================

[1/3] 执行 SPARQL 查询...
SPARQL:

        PREFIX ex: <http://example.org/>
        SELECT (COUNT(?emp) AS ?totalEmployees)
        WHERE {
            ?emp ex:first_name ?fn .
        }
        
结果: 1 行, 51.66 ms

[2/3] 执行 SQL 基线查询...
SQL:

        SELECT COUNT(*) AS "totalEmployees"
        FROM employees
        
结果: 1 行, 13.22 ms

[3/3] 对比结果...
✓ 测试通过

================================================================================
测试: TestAskEmployeeExists
描述: ASK查询：检查是否存在员工
================================================================================

[1/3] 执行 SPARQL 查询...
SPARQL:

        PREFIX ex: <http://example.org/>
        ASK {
            ?emp ex:first_name ?fn .
        }
        
结果: 100000 行, 161.39 ms

[2/3] 执行 SQL 基线查询...
SQL:

        SELECT EXISTS(SELECT 1 FROM employees) AS result
        
结果: 1 行, 6.70 ms

[3/3] 对比结果...
✗ 测试失败:
  - Row count mismatch: SPARQL=100000, SQL=1

================================================================================
测试汇总
================================================================================
总计: 6 个测试
通过: 4 ✓
失败: 2 ✗
通过率: 66.7%

详细结果已保存至: test_basic_select_results.json
